SlimFileManager : Root functionalty
- Root Browsing
- Remount R/W / Delete
- Copying, Moving, Renaming (+minor tweaks)

Patchset 6: fixing RootTools' broken "mounted as" detection to fix remount issues with /system
Patchset 7: Don't reset on device rotation, minor Rename Dialog tweaks
Patchset 8: Allow paths with spaces
Patchset 9: Thumbnail creation fixes (more efficient/less memory, centercrop 52x52, fix some potential Exceptions)
Patchset 10: Killing more potential thumbnail exceptions

Change-Id: Ie035215d6e9c9de0cd247c0e7fc11a9af0144e2e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,8 +34,10 @@
     <string name="image_preview_desc">Display a thumbnail for image files</string>
     <string name="storage_banner">Show Storage Banner</string>
     <string name="storage_banner_desc">Display sdcard storage information</string>
+    <string name="mode">Operating Mode</string>
+    <string name="mode_root">Root mode</string>
+    <string name="mode_root_desc">Operate in Root mode</string>
     <string name="sorting">Sorting</string>
     <string name="sorting_type">Sorting type</string>
     <string name="sorting_desc">Choose how to sort files and folders</string>
-
 </resources>
