Add Finnish Translations
Crowdin: perttutuovinen
Crowdin: rmatasah

Change-Id: Idb7f0e68d4eef2f4ca3b3f84b0bd3d7c3f2a335a

--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -20,13 +20,20 @@
     <string name="zip_folder">Zip kansio</string>
     <string name="path_string">Tiedostopolku</string>
     <string name="create">Luo</string>
+    <string name="rename">Nimeä uudelleen</string>
     <string name="cancel">Peruuta</string>
     <string name="path_desc">Polku on</string>
+    <string name="path">Polku</string>
     <string name="attach">Liitä</string>
     <string name="delete">Poista</string>
     <string name="copy">Kopioi</string>
     <string name="move">Siirrä</string>
+    <string name="search">Etsi</string>
+    <string name="settings">Asetukset</string>
+    <string name="exit">Poistu</string>
     <string name="display">Näyttö</string>
+    <string name="warning">Varoitus!</string>
+    <string name="create_dir">Luo hakemisto</string>
     <string name="text_color">Tekstiväri</string>
     <string name="text_color_desc">Ensisijainen tekstivärin muuttaminen</string>
     <string name="hidden_files">Näytä piilotetut tiedostot ja kansiot</string>
@@ -41,4 +48,90 @@
     <string name="sorting">Lajittelu</string>
     <string name="sorting_type">Lajittelutapa</string>
     <string name="sorting_desc">Valitse, miten tiedostot ja kansiot järjestetään</string>
+    <string name="sort_by_title">Lajittele...\"</string>
+    <string name="created">luotu</string>
+    <string name="rename_target">uudelleennimetty muotoon</string>
+    <string name="search_summary">Etsi tiedostoa</string>
+    <string name="multi_select_off">Multi-Select pois</string>
+    <string name="exit_confirm">Paina uudelleen takaisinnäppäintä poistuaksesi</string>
+    <string name="hidden">(piilotettu)</string>
+    <string name="avail_mem">Käytettävissä oleva muisti</string>
+    <string name="num_processes">Prosessien määrä</string>
+    <string name="audio_file">Äänitiedosto</string>
+    <string name="calculating">Lasketaan tietoja...</string>
+    <string name="empty">Tyhjä</string>
+    <string name="white">Valkoinen</string>
+    <string name="magenta">Magenta</string>
+    <string name="yellow">Keltainen</string>
+    <string name="red">Punainen</string>
+    <string name="cyan">Syaani</string>
+    <string name="blue">Sininen</string>
+    <string name="green">Vihreä</string>
+    <string name="change_color_title">Vaihda tekstin väriä</string>
+    <string name="sort_by_none">Ei mitään</string>
+    <string name="sort_by_alphabetical">Aakkosjärjestyksessä</string>
+    <string name="sort_by_type">Tyyppi</string>
+    <string name="sort_by_size">Koko</string>
+    <string name="sort_by_folders_files">Kansiot-tiedostot</string>
+    <string name="folder_read_error">Käyttöoikeudet eivät riitä kansion lukemiseen</string>
+    <string name="unzip_error">Käyttöoikeudet eivät riitä purkamiseen tässä kansiossa</string>
+    <string name="create_dir_error">Käyttöoikeudet eivät riitä hakemiston luomiseen</string>
+    <string name="rename_error">ei voitu nimetä uudelleen</string>
+    <string name="could_not_find_error">Ei löytynyt</string>
+    <string name="delete_error">Poisto epäonnistui</string>
+    <string name="file_copy_success">Tiedoston kopiointi ja liittäminen onnistui</string>
+    <string name="file_copy_error">Kopioi ja liitä epäonnistui</string>
+    <string name="select_email_app">Valitse sähköpostiohjelma...</string>
+    <string name="email_error">Virhe sähköpostiohjelman käynnistämisessä</string>
+    <string name="website_error">Virhe avattaessa verkkosivua</string>
+    <string name="process_error">Prosessin käynnistäminen epäonnistui</string>
+    <string name="backup_progress">Varmuuskopioi sovelluksia</string>
+    <string name="backup_success">Sovellukset on varmuuskopioitu</string>
+    <string name="downloaded_app_count">SInulla on %s ladattua sovellusta</string>
+    <string name="backup_count">%1$s sovellusta %2$s:sta varmuuskopioitu</string>
+    <string name="folders">kansio(t)</string>
+    <string name="files">tiedosto(t)</string>
+    <string name="items">kohteet</string>
+    <string name="holding_to_extract">purkaa</string>
+    <string name="pdf_error">PDF-lukija puuttuu</string>
+    <string name="html_error">HTML-lukija puuttuu</string>
+    <string name="generic_error">Puuttuva sovellus tiedostotyypille</string>
+    <string name="new_dir">Uusi hakemisto</string>
+    <string name="free_space">Vapaata tilaa</string>
+    <string name="folder_operations_title">Kansiotoiminnot</string>
+    <string name="folder_delete">Poista kansio</string>
+    <string name="folder_rename">Nimeä kansio</string>
+    <string name="folder_copy">Kopioi kansio</string>
+    <string name="folder_cut">Siirrä kansio</string>
+    <string name="folder_zip">ZIP-kansio</string>
+    <string name="folder_paste">Liitä kansioon</string>
+    <string name="file_operations_title">Tiedostotoiminnot</string>
+    <string name="file_delete">Poista tiedosto</string>
+    <string name="file_rename">Nimeä tiedosto</string>
+    <string name="file_copy">Kopioi tiedosto</string>
+    <string name="file_cut">Siirrä tiedosto</string>
+    <string name="file_email">Lähetä tiedosto sähköpostilla</string>
+    <string name="confirm_delete">Poistetaanko varmasti</string>
+    <string name="help_text">Jos sinulla on kysymyksiä tai kommentteja, lähetä sähköpostia kehittäjälle tai käy SlimRoms -nettisivulla.\n\nKiitos\n\n</string>
+    <string name="proc_options">Prosessiasetukset</string>
+    <string name="proc_details">Tiedot</string>
+    <string name="proc_launch">Käynnistä</string>
+    <string name="wifi_is_enabled">Wifi on käytössä</string>
+    <string name="wifi_not_enabled">Wifi ei ole käytössä</string>
+    <string name="disable_wifi">Poista wifi käytöstä</string>
+    <string name="enable_wifi">Ota wifi käyttöön</string>
+    <string name="wifi_disabled">Pois käytöstä</string>
+    <string name="wifi_enabled">Käytössä</string>
+    <string name="wifi_disabling">Poistetaan käytöstä</string>
+    <string name="wifi_enabling">Otetaan käyttöön</string>
+    <string name="wifi_unknown">Tuntematon</string>
+    <string name="wifi_strength">Vahvuus</string>
+    <string name="wifi_not_applicable">N/A</string>
+    <string name="wifi_back">Takaisin</string>
+    <string name="wifi_label_signal_strength">Signaalin vahvuus</string>
+    <string name="wifi_label_state">WIFI:n tila</string>
+    <string name="wifi_label_ip_addr">IP-osoite</string>
+    <string name="wifi_label_mac_addr">MAC-osoite</string>
+    <string name="wifi_label_ssid">SSID</string>
+    <string name="wifi_label_link_speed">Yhteyden nopeus</string>
 </resources>
